infrastructure/nginx/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nginx
  namespace: infrastructure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: demo-nginx
          image: hub.iflytek.com/zlyy-public/nginx:1.17.10
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: demo-nginx-config
              subPath: nginx.conf
            - mountPath: /etc/nginx/confs
              name: demo-nginx-confs
            - mountPath: /home/web
              name: demo-nginx-data
      volumes:
        - name: demo-nginx-config
          configMap:
            name: demo-nginx-config
        - name: demo-nginx-confs
          hostPath:
            path: /k8s/infrastructure/nginx/confs
        - name: demo-nginx-data
          hostPath:
            path: /home/web

---
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx
  namespace: infrastructure
spec:
  type: NodePort #这个是端口类型
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30000 #外网访问端口
  selector:
    app: nginx
