infrastructure/nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: infrastructure
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/enable-access-log: "false"
spec:
  tls:
    - hosts:
        - shtest.iflyhealth.com
      secretName: ingress-tls
  backend:
    serviceName: demo-nginx
    servicePort: 80
